--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2974,3 +2974,226 @@ body {
 .cid-re5tB8gMZ7 .mbr-text {
   color: #efefef;
 }
+.cid-reaRvMWom5 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-reaRvMWom5 .images-container.container-fluid {
+  padding: 0;
+}
+.cid-reaRvMWom5 .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-reaRvMWom5 .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-reaRvMWom5 .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-reaRvMWom5 .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-reaRvMWom5 .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-reaRvMWom5 .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-reaRvMWom5 .img-item {
+    width: 100% !important;
+  }
+  .cid-reaRvMWom5 .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
+.cid-reaRxwtCtG {
+  background: #149dcc;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #149dcc, #ffffff);
+}
+.cid-reaRxwtCtG .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-reaRxwtCtG .video-block {
+    width: 100% !important;
+  }
+}
+.cid-reaRCpVTOi {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-reaRCpVTOi .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-reaRCpVTOi .mbr-content-text {
+  color: #767676;
+}
+.cid-reaRCpVTOi .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-reaRCpVTOi .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
+.cid-reaRCpVTOi .cards-container {
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  word-break: break-word;
+}
+.cid-reaRCpVTOi .media-block {
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+  padding-left: 2rem;
+}
+.cid-reaRCpVTOi .cards-block {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-reaRCpVTOi .card-img {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+@media (max-width: 991px) {
+  .cid-reaRCpVTOi .media-block {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    padding-left: 0;
+    padding-bottom: 2rem;
+  }
+}
+.cid-reaRIumwE0 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  position: relative;
+  background-color: #ffffff;
+}
+.cid-reaRIumwE0 p {
+  color: #767676;
+}
+.cid-reaRIumwE0 .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-reaRIumwE0 .toggle-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-reaRIumwE0 .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-reaRIumwE0 .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-reaRIumwE0 .card .card-header a.panel-title {
+  margin-bottom: 0;
+  margin-top: -1px;
+  font-weight: 500;
+  font-style: normal;
+  display: block;
+  text-decoration: none !important;
+}
+.cid-reaRIumwE0 .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-reaRIumwE0 .card .card-header a.panel-title h4 {
+  border: 1px solid #dfdfdf;
+  padding: 1.3rem 2rem;
+  margin-bottom: 0;
+}
+.cid-reaRIumwE0 .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-reaRIumwE0 .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+}
+@media (max-width: 991px) {
+  .cid-reaRIumwE0 .mbr-figure {
+    padding-top: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-reaRIumwE0 .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+.cid-reaRKEeK9Q {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-reaRKEeK9Q .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-reaRKEeK9Q .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-reaRKEeK9Q .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-reaRKEeK9Q .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-reaRKEeK9Q .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-reaRKEeK9Q .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-reaRKEeK9Q .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-reaRKEeK9Q .btn-social {
+  border: none !important;
+}
+.cid-reaRKEeK9Q [class^="socicon-"]:before,
+.cid-reaRKEeK9Q [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-reaRKEeK9Q .btn {
+    font-size: 20px !important;
+  }
+}
