--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2764,8 +2764,8 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-rdUviOFUpe {
-  padding-top: 105px;
-  padding-bottom: 105px;
+  padding-top: 60px;
+  padding-bottom: 0px;
   background-image: url("../../../assets/images/holger-link-756754-unsplash-2000x1333.jpg");
 }
 .cid-rdUviOFUpe h4 {
@@ -2811,9 +2811,9 @@ body {
   text-align: center;
 }
 .cid-rdYPxpiDUA {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #2e2e2e;
+  padding-top: 60px;
+  padding-bottom: 30px;
+  background-color: #232323;
 }
 @media (max-width: 767px) {
   .cid-rdYPxpiDUA .content {
@@ -2921,279 +2921,157 @@ body {
 .cid-rdYPxpiDUA .foot-text {
   text-align: left;
 }
-.cid-re5tnlMOl2 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-re5tnlMOl2 .counter-container {
-  color: #767676;
-}
-.cid-re5tnlMOl2 .counter-container ol {
-  margin-bottom: 0;
-  counter-reset: myCounter;
-}
-.cid-re5tnlMOl2 .counter-container ol li {
-  margin-bottom: 1rem;
-}
-.cid-re5tnlMOl2 .counter-container ol li {
-  list-style: none;
-  padding-left: .5rem;
-}
-.cid-re5tnlMOl2 .counter-container ol li:before {
-  position: absolute;
-  left: 0px;
-  margin-top: -10px;
-  counter-increment: myCounter;
-  content: counter(myCounter);
-  display: inline-block;
-  text-align: center;
-  margin: 5px 10px;
-  line-height: 40px;
-  transition: all .2s;
-  color: #ffffff;
-  background: #149dcc;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.cid-re5tzASyY4 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-re5tzASyY4 .mbr-text,
-.cid-re5tzASyY4 blockquote {
-  color: #767676;
-}
-.cid-re5tB8gMZ7 {
-  padding-top: 60px;
+.cid-reVFsba6l8 {
+  padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #080707;
+  background-color: #efefef;
 }
-.cid-re5tB8gMZ7 .mbr-text {
-  color: #efefef;
+.cid-reVFsba6l8 .mbr-section-subtitle {
+  color: #767676;
 }
-.cid-reaRvMWom5 {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background: #ffffff;
+.cid-reVFsba6l8 .mbr-text {
+  color: #767676;
 }
-.cid-reaRvMWom5 .images-container.container-fluid {
-  padding: 0;
+.cid-reVFsba6l8 .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
 }
-.cid-reaRvMWom5 .media-container-row {
-  margin: 0 auto;
-  align-items: stretch;
-  -webkit-align-items: stretch;
+.cid-reVFsba6l8 .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
 }
-.cid-reaRvMWom5 .media-container-row .img-item {
+.cid-reVFsba6l8 .card-wrapper .card-img {
   display: -webkit-flex;
   flex-direction: column;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: center;
-}
-.cid-reaRvMWom5 .media-container-row .img-item img {
-  width: 100%;
-  min-height: 1px;
-}
-.cid-reaRvMWom5 .media-container-row .img-item .img-caption {
-  background: #ffffff;
-  z-index: 2;
-  padding: 1rem 1rem;
-  word-break: break-word;
-}
-.cid-reaRvMWom5 .media-container-row .img-item .img-caption p {
-  margin-bottom: 0;
-}
-.cid-reaRvMWom5 .media-container-row .img-item.item1 {
-  padding: 0 2rem 0 0;
-}
-@media (max-width: 992px) {
-  .cid-reaRvMWom5 .img-item {
-    width: 100% !important;
-  }
-  .cid-reaRvMWom5 .img-item.item1 {
-    width: 100%;
-    flex-basis: initial !important;
-    padding: 0 0 2rem 0 !important;
-    -webkit-flex-basis: initial !important;
-  }
-}
-.cid-reaRxwtCtG {
-  background: #149dcc;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #149dcc, #ffffff);
-}
-.cid-reaRxwtCtG .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-reaRxwtCtG .video-block {
-    width: 100% !important;
-  }
-}
-.cid-reaRCpVTOi {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-reaRCpVTOi .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-reaRCpVTOi .mbr-content-text {
-  color: #767676;
-}
-.cid-reaRCpVTOi .card {
-  word-wrap: break-word;
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-.cid-reaRCpVTOi .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
-}
-.cid-reaRCpVTOi .cards-container {
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  word-break: break-word;
-}
-.cid-reaRCpVTOi .media-block {
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-  padding-left: 2rem;
-}
-.cid-reaRCpVTOi .cards-block {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-reaRCpVTOi .card-img {
-  display: flex;
-  -webkit-align-items: center;
   align-items: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-@media (max-width: 991px) {
-  .cid-reaRCpVTOi .media-block {
-    flex-basis: 100%;
-    -webkit-flex-basis: 100%;
-    padding-left: 0;
-    padding-bottom: 2rem;
-  }
-}
-.cid-reaRIumwE0 {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  justify-content: center;
   position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-reVFsba6l8 .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-reVFsba6l8 .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+}
+.cid-reVFsba6l8 .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-reVFsba6l8 .card-wrapper .card-box {
   background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
-.cid-reaRIumwE0 p {
-  color: #767676;
-}
-.cid-reaRIumwE0 .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-reaRIumwE0 .toggle-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-reaRIumwE0 .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
-}
-.cid-reaRIumwE0 .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
-}
-.cid-reaRIumwE0 .card .card-header a.panel-title {
-  margin-bottom: 0;
-  margin-top: -1px;
+.cid-reVFsba6l8 .card-wrapper .card-box h4 {
   font-weight: 500;
-  font-style: normal;
-  display: block;
-  text-decoration: none !important;
-}
-.cid-reaRIumwE0 .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
-}
-.cid-reaRIumwE0 .card .card-header a.panel-title h4 {
-  border: 1px solid #dfdfdf;
-  padding: 1.3rem 2rem;
   margin-bottom: 0;
+  padding-top: 2rem;
 }
-.cid-reaRIumwE0 .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
+.cid-reVFsba6l8 .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
 }
-.cid-reaRIumwE0 .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
+.cid-reVFsba6l8 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
 }
-@media (max-width: 991px) {
-  .cid-reaRIumwE0 .mbr-figure {
-    padding-top: 2rem;
-  }
+.cid-reVFsba6l8 .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
 }
-@media (min-width: 992px) {
-  .cid-reaRIumwE0 .mbr-figure {
-    padding-left: 4rem;
-  }
+.cid-reVFsba6l8 .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: -webkit-flex !important;
+  opacity: 0;
 }
-.cid-reaRKEeK9Q {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-reVFsba6l8 .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-reVFsba6l8 .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-reVFE0wl9L {
+  background-image: url("../../../assets/images/jumbotron.jpg");
+}
+.cid-reVFGFPX0J {
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-reaRKEeK9Q .socicon-bg-facebook {
-  background: #3e5b98;
-  color: #ffffff;
+.cid-reVFGFPX0J .mbr-slider .carousel-control {
+  background: #1b1b1b;
 }
-.cid-reaRKEeK9Q .socicon-bg-twitter {
-  background: #4da7de;
-  color: #ffffff;
+.cid-reVFGFPX0J .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
 }
-.cid-reaRKEeK9Q .socicon-bg-googleplus {
-  background: #dd4b39;
-  color: #ffffff;
+.cid-reVFGFPX0J .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
 }
-.cid-reaRKEeK9Q .socicon-bg-vkontakte {
-  background: #5a7fa6;
-  color: #ffffff;
+.cid-reVFGFPX0J .mbr-slider .modal-body .close {
+  background: #1b1b1b;
 }
-.cid-reaRKEeK9Q .socicon-bg-odnoklassniki {
-  background: #f48420;
-  color: #ffffff;
+.cid-reVFGFPX0J .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
-.cid-reaRKEeK9Q .socicon-bg-pinterest {
-  background: #c92619;
-  color: #ffffff;
+.cid-reVFGFPX0J .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
 }
-.cid-reaRKEeK9Q .socicon-bg-mail {
-  background: #134785;
-  color: #ffffff;
+.cid-reVFGFPX0J .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
 }
-.cid-reaRKEeK9Q .btn-social {
-  border: none !important;
+.cid-reVFGFPX0J .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
 }
-.cid-reaRKEeK9Q [class^="socicon-"]:before,
-.cid-reaRKEeK9Q [class*=" socicon-"]:before {
-  line-height: 44px;
-}
-@media (max-width: 767px) {
-  .cid-reaRKEeK9Q .btn {
-    font-size: 20px !important;
-  }
+.cid-reVFGFPX0J .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
