--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3317,79 +3317,17 @@ body {
     width: 100% !important;
   }
 }
-.cid-rfcqWUkvGa {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-rfcqWUkvGa .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-rfcqWUkvGa .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rfcqWUkvGa .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rfcqWUkvGa .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-rfcqWUkvGa .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-rfcqWUkvGa .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-rfcqWUkvGa .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-rfcqWUkvGa .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-rfcqWUkvGa .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
 .cid-rfcr0ZM8IW {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background: url("../../../assets/images/background2.jpg");
 }
 .cid-rfcr0ZM8IW .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
 .cid-rfcr0ZM8IW .number-wrap {
-  color: #ffffff;
+  color: #080707;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
   display: inline-block;
@@ -3408,7 +3346,7 @@ body {
   font-size: 55px;
   word-spacing: 0;
   line-height: 1.3;
-  color: #ffffff;
+  color: #cc2952;
 }
 .cid-rfcr0ZM8IW .period {
   display: block;
@@ -3430,10 +3368,10 @@ body {
   text-transform: none;
   letter-spacing: 0;
   word-spacing: 0;
-  color: #ffffff;
+  color: #cc2952;
 }
 .cid-rfcr0ZM8IW .countdown-cont {
-  background: linear-gradient(45deg, #149dcc, #c8ceaf);
+  background: linear-gradient(45deg, #0f7699, #f9f295);
   max-width: 700px;
   border-radius: 3px;
   margin: 0 auto;
@@ -3475,4 +3413,66 @@ body {
   .cid-rfcr0ZM8IW .period {
     font-size: 0.6rem;
   }
+}
+.cid-rfctvhyTPM {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rfctvhyTPM .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rfctvhyTPM .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rfctvhyTPM .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rfctvhyTPM .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rfctvhyTPM .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rfctvhyTPM .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rfctvhyTPM .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rfctvhyTPM .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rfctvhyTPM .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
