--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3548,3 +3548,6 @@ body {
     font-size: 20px !important;
   }
 }
+.cid-rfuSy5BXwF {
+  background-image: url("../../../assets/images/jumbotron.jpg");
+}
