create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3548,11 +3548,8 @@ body {
     font-size: 20px !important;
   }
 }
-.cid-rfuVffre8o {
+.cid-rfuVE82YKZ {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rfuVffre8o .mbr-section-subtitle {
-  color: #767676;
+  background-image: url("../../../assets/images/jumbotron.jpg");
 }
