--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4637,38 +4637,93 @@ body {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rnexvhKITu {
-  background: #ffffff;
+.cid-rneyLmXc5Y {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
 }
-.cid-rnexvhKITu .image-block {
-  margin: auto;
-  width: 100% !important;
+.cid-rneyLmXc5Y .mbr-slider .carousel-control {
+  background: #1b1b1b;
 }
-.cid-rnexvhKITu .mbr-figure {
-  margin: 0 auto;
+.cid-rneyLmXc5Y .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
 }
-.cid-rnexvhKITu figcaption {
-  position: relative;
+.cid-rneyLmXc5Y .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
 }
-.cid-rnexvhKITu figcaption div {
+.cid-rneyLmXc5Y .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rneyLmXc5Y .mbr-gallery-item > div::before {
+  content: '';
   position: absolute;
-  bottom: 0;
+  left: 0;
+  top: 0;
   width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rneyLmXc5Y .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rneyLmXc5Y .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rneyLmXc5Y .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rneyLmXc5Y .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rneyIqkJj9 {
+  background: #149dcc;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #149dcc, #ffffff);
+}
+.cid-rneyIqkJj9 .video-block {
+  margin: auto;
 }
 @media (max-width: 768px) {
-  .cid-rnexvhKITu .image-block {
+  .cid-rneyIqkJj9 .video-block {
     width: 100% !important;
   }
 }
-.cid-rnexpm1y17 {
-  background: #ffffff;
+.cid-rneyJd3m9v {
+  background: #149dcc;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #149dcc, #ffffff);
 }
-.cid-rnexpm1y17 .video-block {
+.cid-rneyJd3m9v .video-block {
   margin: auto;
-  width: 100% !important;
 }
 @media (max-width: 768px) {
-  .cid-rnexpm1y17 .video-block {
+  .cid-rneyJd3m9v .video-block {
     width: 100% !important;
   }
 }
