create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5109,10 +5109,10 @@ body {
   color: #c1c1c1 !important;
 }
 .cid-rneAfzyNty {
-  background: #0f7699;
+  background: #635a51;
   padding-top: 60px;
   padding-bottom: 60px;
-  background: linear-gradient(0deg, #cc2952, #0f7699);
+  background: linear-gradient(0deg, #cc2952, #635a51);
 }
 .cid-rneAfzyNty .image-block {
   margin: auto;
