--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5110,12 +5110,11 @@ body {
 }
 .cid-rneAfzyNty {
   background: #635a51;
-  padding-top: 60px;
-  padding-bottom: 60px;
   background: linear-gradient(0deg, #cc2952, #635a51);
 }
 .cid-rneAfzyNty .image-block {
   margin: auto;
+  width: 100% !important;
 }
 .cid-rneAfzyNty figcaption {
   position: relative;
@@ -5132,12 +5131,11 @@ body {
 }
 .cid-rneAgg46L0 {
   background: #149dcc;
-  padding-top: 60px;
-  padding-bottom: 60px;
   background: linear-gradient(0deg, #149dcc, #ffffff);
 }
 .cid-rneAgg46L0 .video-block {
   margin: auto;
+  width: 100% !important;
 }
 @media (max-width: 768px) {
   .cid-rneAgg46L0 .video-block {
@@ -5146,12 +5144,11 @@ body {
 }
 .cid-rneAgY1JlT {
   background: #149dcc;
-  padding-top: 60px;
-  padding-bottom: 60px;
   background: linear-gradient(0deg, #149dcc, #ffffff);
 }
 .cid-rneAgY1JlT .video-block {
   margin: auto;
+  width: 100% !important;
 }
 @media (max-width: 768px) {
   .cid-rneAgY1JlT .video-block {
@@ -5160,12 +5157,11 @@ body {
 }
 .cid-rneB3xKw1D {
   background: #149dcc;
-  padding-top: 60px;
-  padding-bottom: 60px;
   background: linear-gradient(0deg, #149dcc, #ffffff);
 }
 .cid-rneB3xKw1D .video-block {
   margin: auto;
+  width: 100% !important;
 }
 @media (max-width: 768px) {
   .cid-rneB3xKw1D .video-block {
