--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3720,17 +3720,25 @@ body {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rx8TPq5P75 {
+.cid-rx90TWNRI0 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rx90TWNRI0 P {
+  color: #767676;
+}
+.cid-rx90X3u6q4 {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-rx8TPq5P75 .mbr-section-subtitle {
+.cid-rx90X3u6q4 .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
-.cid-rx8TPq5P75 .number-wrap {
-  color: #ffffff;
+.cid-rx90X3u6q4 .number-wrap {
+  color: #4f4943;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
   display: inline-block;
@@ -3741,128 +3749,217 @@ body {
   border-radius: 2px;
   max-width: 100%;
 }
-.cid-rx8TPq5P75 .number {
+.cid-rx90X3u6q4 .number {
   font-style: normal;
   font-weight: 700;
+  font-size: 55px;
   text-transform: none;
   letter-spacing: -2px;
-  font-size: 55px;
   word-spacing: 0;
   line-height: 1.3;
-  color: #ffffff;
+  color: #232323;
 }
-.cid-rx8TPq5P75 .period {
+.cid-rx90X3u6q4 .period {
   display: block;
   padding-top: 2px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.cid-rx8TPq5P75 .dot {
+.cid-rx90X3u6q4 .dot {
   position: absolute;
   top: -10px;
   right: -1em;
   width: 1em;
   display: block;
-  font-size: 55px;
   height: 83%;
   overflow: hidden;
   font-style: normal;
   font-weight: 700;
+  font-size: 55px;
   line-height: 89.65px;
   text-transform: none;
   letter-spacing: 0;
   word-spacing: 0;
-  color: #ffffff;
+  color: #232323;
 }
-.cid-rx8TPq5P75 .countdown-cont {
-  background: linear-gradient(45deg, #149dcc, #e4d295);
+.cid-rx90X3u6q4 .countdown-cont {
   max-width: 700px;
-  border-radius: 3px;
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-rx8TPq5P75 .dot {
+  .cid-rx90X3u6q4 .dot {
     display: none;
   }
-  .cid-rx8TPq5P75 .col-xs-3 {
+}
+@media (max-width: 543px) {
+  .cid-rx90X3u6q4 .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rx90X3u6q4 .col-xs-3 {
     padding-left: 0;
     padding-right: 0;
     max-width: 25%;
     flex: 0 0 25%;
   }
-  .cid-rx8TPq5P75 .number-wrap {
+  .cid-rx90X3u6q4 .number-wrap {
     min-width: auto;
   }
 }
-@media (max-width: 576px) {
-  .cid-rx8TPq5P75 .row {
-    flex-wrap: nowrap;
-  }
-  .cid-rx8TPq5P75 .number {
-    white-space: nowrap;
+@media (max-width: 440px) {
+  .cid-rx90X3u6q4 .number,
+  .cid-rx90X3u6q4 .dot {
+    font-size: 40px;
   }
 }
-@media (max-width: 440px) {
-  .cid-rx8TPq5P75 .number {
-    font-size: 30px;
-  }
-  .cid-rx8TPq5P75 .period {
+@media (max-width: 380px) {
+  .cid-rx90X3u6q4 .period {
     font-size: 0.8rem;
   }
 }
-@media (max-width: 300px) {
-  .cid-rx8TPq5P75 .number {
-    font-size: 20px;
-  }
-  .cid-rx8TPq5P75 .period {
-    font-size: 0.6rem;
-  }
-}
-.cid-rx8UTY0GDH {
-  padding-top: 90px;
-  padding-bottom: 90px;
-}
-.cid-rx8UWPgCOW {
+.cid-rx913Uj8e0 {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-rx8UWPgCOW .mbr-iconfont {
+.cid-rx913Uj8e0 .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rx913Uj8e0 .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-rx913Uj8e0 .card_cont {
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  background-color: #eee;
+}
+.cid-rx913Uj8e0 .card-front {
+  z-index: 2;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.cid-rx913Uj8e0 .card-front img {
+  height: 100%;
+  min-width: 100%;
+  width: auto;
+}
+.cid-rx913Uj8e0 .card_back {
+  width: 100%;
+  height: 100%;
+  padding: 30px 30px;
+  color: #ffffff;
+  background-color: #55b4d4;
+  z-index: 1;
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+.cid-rx913Uj8e0 .card {
+  min-height: 300px;
+}
+.cid-rx913Uj8e0 .card:hover .card-front {
+  z-index: 1;
+  -o-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.cid-rx913Uj8e0 .card:hover .card_back {
+  z-index: 2;
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+}
+.cid-rx913Uj8e0 .builderCard .card_back {
+  border-bottom-left-radius: 100px;
+}
+.cid-rx913Uj8e0 .builderCard .card_cont {
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidd;
+  -moz-backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.cid-rx91CQOU6l {
+  background: #ffffff;
+}
+.cid-rx91CQOU6l .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-rx91CQOU6l .video-block {
+    width: 100% !important;
+  }
+}
+.cid-rx91HOZzDD {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rx91HOZzDD .mbr-iconfont {
   font-size: 48px;
   padding-right: 1rem;
 }
-.cid-rx8UWPgCOW .icon-block {
+.cid-rx91HOZzDD .icon-block {
   margin-bottom: 10px;
 }
-.cid-rx8UWPgCOW .icon-block .icon-block__icon {
+.cid-rx91HOZzDD .icon-block .icon-block__icon {
   display: inline-block;
   vertical-align: middle;
 }
-.cid-rx8UWPgCOW .icon-block .icon-block__title {
+.cid-rx91HOZzDD .icon-block .icon-block__title {
   display: inline-block;
   vertical-align: middle;
   margin-bottom: 0;
   line-height: 1;
   font-style: italic;
 }
-.cid-rx8UWPgCOW .mbr-text {
+.cid-rx91HOZzDD .mbr-text {
   color: #767676;
 }
-.cid-rx8UWPgCOW textarea.form-control {
+.cid-rx91HOZzDD textarea.form-control {
   min-height: 100px;
 }
-.cid-rx8UWPgCOW a:not([href]):not([tabindex]) {
+.cid-rx91HOZzDD a:not([href]):not([tabindex]) {
   color: #fff;
   border-radius: 3px;
 }
-.cid-rx8UWPgCOW .google-map {
+.cid-rx91HOZzDD .google-map {
   height: 25rem;
   position: relative;
 }
-.cid-rx8UWPgCOW .google-map iframe {
+.cid-rx91HOZzDD .google-map iframe {
   height: 100%;
   width: 100%;
 }
-.cid-rx8UWPgCOW .google-map [data-state-details] {
+.cid-rx91HOZzDD .google-map [data-state-details] {
   color: #6b6763;
   font-family: Montserrat;
   height: 1.5em;
@@ -3874,22 +3971,22 @@ body {
   top: 50%;
   width: 100%;
 }
-.cid-rx8UWPgCOW .google-map[data-state] {
+.cid-rx91HOZzDD .google-map[data-state] {
   background: #e9e5dc;
 }
-.cid-rx8UWPgCOW .google-map[data-state="loading"] [data-state-details] {
+.cid-rx91HOZzDD .google-map[data-state="loading"] [data-state-details] {
   display: none;
 }
 @media (max-width: 767px) {
-  .cid-rx8UWPgCOW h2 {
+  .cid-rx91HOZzDD h2 {
     padding-top: 2rem;
   }
 }
 @media (min-width: 768px) {
-  .cid-rx8UWPgCOW .container > .row > .col-md-6:first-child {
+  .cid-rx91HOZzDD .container > .row > .col-md-6:first-child {
     padding-right: 30px;
   }
-  .cid-rx8UWPgCOW .container > .row > .col-md-6:last-child {
+  .cid-rx91HOZzDD .container > .row > .col-md-6:last-child {
     padding-left: 30px;
   }
 }
