--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3990,3 +3990,48 @@ body {
     padding-left: 30px;
   }
 }
+.cid-rx92cYUV8w {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rx92cYUV8w .socicon-bg-facebook {
+  background: #3e5b98;
+  color: #ffffff;
+}
+.cid-rx92cYUV8w .socicon-bg-twitter {
+  background: #4da7de;
+  color: #ffffff;
+}
+.cid-rx92cYUV8w .socicon-bg-googleplus {
+  background: #dd4b39;
+  color: #ffffff;
+}
+.cid-rx92cYUV8w .socicon-bg-vkontakte {
+  background: #5a7fa6;
+  color: #ffffff;
+}
+.cid-rx92cYUV8w .socicon-bg-odnoklassniki {
+  background: #f48420;
+  color: #ffffff;
+}
+.cid-rx92cYUV8w .socicon-bg-pinterest {
+  background: #c92619;
+  color: #ffffff;
+}
+.cid-rx92cYUV8w .socicon-bg-mail {
+  background: #134785;
+  color: #ffffff;
+}
+.cid-rx92cYUV8w .btn-social {
+  border: none !important;
+}
+.cid-rx92cYUV8w [class^="socicon-"]:before,
+.cid-rx92cYUV8w [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+@media (max-width: 767px) {
+  .cid-rx92cYUV8w .btn {
+    font-size: 20px !important;
+  }
+}
