--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3819,8 +3819,9 @@ body {
 }
 .cid-rx91CQOU6l {
   background: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: linear-gradient(45deg, #ffffff, #cccccc);
 }
 .cid-rx91CQOU6l .video-block {
   margin: auto;
