create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -754,6 +754,50 @@ section.lazy-placeholder:after {
   margin-top: 1rem;
   margin-bottom: 0;
 }
+.cid-rWpz06R1xy {
+  padding-top: 105px;
+  padding-bottom: 90px;
+  background-color: #232323;
+}
+.cid-rWpz06R1xy h4 {
+  font-weight: 500;
+  color: #ffffff;
+}
+.cid-rWpz06R1xy p {
+  color: #ffffff;
+}
+.cid-rWpz06R1xy .card {
+  margin-bottom: 2rem;
+}
+.cid-rWpz06R1xy .card-img {
+  border-radius: 0;
+  padding: 2rem 2rem 0 2rem;
+  background-color: #7f1933;
+}
+.cid-rWpz06R1xy .card-img span {
+  font-size: 100px;
+  color: #ffffff;
+}
+.cid-rWpz06R1xy .card-box {
+  padding-bottom: 2rem;
+  background-color: #7f1933;
+  background: linear-gradient(#7f1933, transparent);
+}
+.cid-rWpz06R1xy .card-box .card-title {
+  margin: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+.cid-rWpz06R1xy .card-box .mbr-text {
+  margin-bottom: 0;
+  padding: 2rem 2rem 0 2rem;
+}
+.cid-rWpz06R1xy .card-box .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rWpz06R1xy .card-box .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
 .cid-rW0s6fvjHf {
   background: #149dcc;
   padding-top: 60px;
